--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,22 +10,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20.x'
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Run unit tests
       run: npm test
@@ -45,7 +41,7 @@ jobs:
     - name: Upload screenshots as artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: screenshots-${{ matrix.node-version }}
+        name: ui-screenshots
         path: e2e/screenshots/
         retention-days: 30
         
